First iteration of code adjustment and refactoring